--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<link rel="stylesheet" href="main.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+</head>
 <nav class="tab-nav">
   <a href="#page-1">Page 1</a>
   <a href="#page-2">Page 2</a>
