feat: add tabs with radio

--- a/index.html
+++ b/index.html
@@ -3,13 +3,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
 </head>
-<nav class="tab-nav">
-  <a href="#page-1">Page 1</a>
-  <a href="#page-2">Page 2</a>
-</nav>
-<div class="tab" id="page-1">
-  <h1>Page 1</h1>
-</div>
-<div class="tab" id="page-2">
-  <h1>Page 2</h1>
+<div class="tabs-wrapper">
+  <input class="tab-radio" type="radio" name="tab" id="page-1" checked />
+  <label class="tab-nav-label" for="page-1">Page 1</label>
+  <div class="tab">
+    <h1>Page 1</h1>
+    <p>
+      Tab 1 dolor sit amet consectetur adipisicing elit. Iure voluptas nesciunt magni suscipit, quia debitis fugit
+      blanditiis, nam saepe ullam, consequuntur rem maiores repellendus est quae tempora cupiditate vero earum!
+    </p>
+    <p>
+      Tab 1 dolor sit amet consectetur adipisicing elit. Iure voluptas nesciunt magni suscipit, quia debitis fugit
+      blanditiis, nam saepe ullam, consequuntur rem maiores repellendus est quae tempora cupiditate vero earum!
+    </p>
+    <p>
+      Tab 1 dolor sit amet consectetur adipisicing elit. Iure voluptas nesciunt magni suscipit, quia debitis fugit
+      blanditiis, nam saepe ullam, consequuntur rem maiores repellendus est quae tempora cupiditate vero earum!
+    </p>
+  </div>
+  <input class="tab-radio" type="radio" name="tab" id="page-2" />
+  <label class="tab-nav-label" for="page-2">Page 2</label>
+  <div class="tab">
+    <h1>Page 2</h1>
+    <p>
+      Tab 2 dolor sit amet consectetur adipisicing elit. Iure voluptas nesciunt magni suscipit, quia debitis fugit
+      blanditiis, nam saepe ullam, consequuntur rem maiores repellendus est quae tempora cupiditate vero earum!
+    </p>
+    <p>
+      Tab 2 dolor sit amet consectetur adipisicing elit. Iure voluptas nesciunt magni suscipit, quia debitis fugit
+      blanditiis, nam saepe ullam, consequuntur rem maiores repellendus est quae tempora cupiditate vero earum!
+    </p>
+  </div>
+  <input class="tab-radio" type="radio" name="tab" id="page-3" />
+  <label class="tab-nav-label" for="page-3">Page 3</label>
+  <div class="tab">
+    <h1>Page 3</h1>
+    <p>
+      Tab 3 dolor sit amet consectetur adipisicing elit. Iure voluptas nesciunt magni suscipit, quia debitis fugit
+      blanditiis, nam saepe ullam, consequuntur rem maiores repellendus est quae tempora cupiditate vero earum!
+    </p>
+  </div>
 </div>
